--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,7 @@ services:
   apache:
     image: httpd:alpine
     volumes:
-      - "./index.html:/usr/local/apache2/htdocs/index.html:ro"
-      - "./css:/usr/local/apache2/htdocs/css:ro"
-      - "./js:/usr/local/apache2/htdocs/js:ro"
-      - "./img:/usr/local/apache2/htdocs/img:ro"
+      - ".:/usr/local/apache2/htdocs:ro"
     ports:
       - 8090:80
     restart: always
